--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1 {
 
 #startScreen {
     text-align: center;
+    padding: 20px;
 }
 
 #gameScreen {
@@ -42,7 +43,7 @@ button {
     color: white;
     border: none;
     border-radius: 5px;
-    width: 50px;
+    width: 150px;
     text-align: center;
 }
 
@@ -53,4 +54,10 @@ button:hover {
 label {
     margin-right: 10px;
     margin-top: 10px;
+}
+
+.start-btn {
+    margin-top: 20px;
+    width: 200px; /* Knop breder maken */
+    font-size: 18px;
 }
